--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Font preview</title>
     <link
-      href="http://fonts.cdnfonts.com/css/sf-pro-display"
+      href="https://fonts.cdnfonts.com/css/sf-pro-display"
       rel="stylesheet"
     />
     <link
